--- a/.github/workflows/ci_cd_pipeline.yml
+++ b/.github/workflows/ci_cd_pipeline.yml
@@ -21,5 +21,8 @@ jobs:
           java-version: '21'
           distribution: 'temurin'
 
+      - name: mavem excutavel
+        run: chmod +x ./mvnw
+
       - name: Run tests
         run: ./mvnw test
