--- a/.github/workflows/ci_cd_pipeline.yml
+++ b/.github/workflows/ci_cd_pipeline.yml
@@ -46,3 +46,63 @@ jobs:
 
       - name: Checkagem do codigo
         run: ./mvnw checkstyle:check
+
+  build-job:
+    name: Build Docker Image
+    runs-on: ubuntu-latest
+    needs: [ testing-job, linting-job ]
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '21'
+          distribution: 'temurin'
+
+      - name: mavem excutavel
+        run: chmod +x ./mvnw
+
+      - name: Build JAR
+        run: ./mvnw clean package -DskipTests
+
+      - name: Build Docker image
+        run: |
+          docker build \
+            --tag my-app:${{ github.sha }} \
+            --tag my-app:latest \
+            .
+
+      - name: Save Docker image
+        run: docker save my-app:latest -o app.tar
+
+      - name: Upload Docker image
+        uses: actions/upload-artifact@v3
+        with:
+          name: app-image
+          path: app.tar
+
+  run-built-image-job:
+    name: Test Docker Image
+    runs-on: ubuntu-latest
+    needs: build-job
+
+    steps:
+      - name: Download Docker image
+        uses: actions/download-artifact@v3
+        with:
+          name: app-image
+
+      - name: Load Docker image
+        run: docker load -i app.tar
+
+      - name: Run Docker container
+        run: |
+          docker run -d -p 8080:8080 --name my-running-app my-app:latest
+
+      - name: Test application
+        run: |
+          sleep 10
+          curl -f http://localhost:8080/      
