--- a/.github/workflows/ci_cd_pipeline.yml
+++ b/.github/workflows/ci_cd_pipeline.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   testing-job:
     name: Tests
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, linux, x64]
 
     steps:
       - name: Checkout code
@@ -29,7 +29,7 @@ jobs:
 
   linting-job:
     name: Code Quality
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, linux, x64]
 
     steps:
       - name: Checkout code
@@ -49,7 +49,7 @@ jobs:
 
   build-job:
     name: Build Docker Image
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, linux, x64]
     needs: [ testing-job, linting-job ]
 
     steps:
@@ -86,7 +86,7 @@ jobs:
 
   run-built-image-job:
     name: Test Docker Image
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, linux, x64]
     needs: build-job
 
     steps:
